--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 import org.gradle.api.internal.file.copy.CopySpecInternal
 
 sourceCompatibility = '1.8'
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+[testJava, testTestJava]*.options*.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
@@ -11,27 +11,27 @@ repositories {
 
 dependencies {
     // Test dependencies
-    compile 'org.mockito:mockito-core:3.2.4'
-    compile 'commons-io:commons-io:2.6'
-    compile group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
+    test 'org.mockito:mockito-core:3.2.4'
+    test 'commons-io:commons-io:2.6'
+    test group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
 
     // Module dependencies
-    compile 'com.zaxxer:HikariCP:3.4.5'
-    compile 'org.slf4j:slf4j-api:1.7.28'
-    compile 'com.ibm.db2.jcc:db2jcc:db2jcc4'
-    compile 'org.hsqldb:hsqldb:2.5.0'
-    compile 'org.mariadb.jdbc:mariadb-java-client:2.6.0'
-    compile 'com.microsoft.sqlserver:mssql-jdbc:8.2.2.jre11'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
-    compile 'org.postgresql:postgresql:42.2.14'
-    compile 'com.sap.cloud.db.jdbc:ngdbc:2.4.76'
+    test 'com.zaxxer:HikariCP:3.4.5'
+    test 'org.slf4j:slf4j-api:1.7.28'
+    test 'com.ibm.db2.jcc:db2jcc:db2jcc4'
+    test 'org.hsqldb:hsqldb:2.5.0'
+    test 'org.mariadb.jdbc:mariadb-java-client:2.6.0'
+    test 'com.microsoft.sqlserver:mssql-jdbc:8.2.2.jre11'
+    test 'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
+    test 'org.postgresql:postgresql:42.2.14'
+    test 'com.sap.cloud.db.jdbc:ngdbc:2.4.76'
 
     // UnitTesting
-    compile group: 'junit', name: 'junit', version: '4.11', { transitive = false }
-    compile group: 'commons-io', name: 'commons-io', version: '2.3', { transitive = false }
-    compile group: 'org.apache.httpcomponents', name: 'httpcore-osgi', version: '4.4.1', { transitive = false }
-    compile group: 'org.apache.httpcomponents', name: 'httpclient-osgi', version: '4.4.1', { transitive = false }
+    test group: 'junit', name: 'junit', version: '4.11', { transitive = false }
+    test group: 'commons-io', name: 'commons-io', version: '2.3', { transitive = false }
+    test group: 'org.apache.httpcomponents', name: 'httpcore-osgi', version: '4.4.1', { transitive = false }
+    test group: 'org.apache.httpcomponents', name: 'httpclient-osgi', version: '4.4.1', { transitive = false }
 
     // UnitTesting and ObjectHandling
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1', { transitive = false }
+    test group: 'org.apache.commons', name: 'commons-lang3', version: '3.1', { transitive = false }
 }
